--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "devt": "nodemon Dev-test.js"
+    "dev": "nodemon App/Index.js"
   },
   "keywords": [],
   "author": "Ibrahim Rahhal",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
+    "express": "^4.16.3",
     "nodemon": "^1.18.3"
   },
   "devDependencies": {
